--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^0.16.2",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react-dom": "^15.6.2",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
